--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,10 @@
   font-weight: 400;
   --secondary-color: #03b276;
   --link-hover: #035639;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #fafafa;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-main {
-  padding-top: 7rem;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding-bottom: 7rem;
 }
 
 a {
@@ -29,17 +18,13 @@ a:hover {
   color: var(--link-hover);
 }
 
-body {
+/* body {
   margin: 0;
-  background-color: #fafafa;
+  background-color: var(--bg);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   padding: 0;
-  /* display: flex;
-  place-items: center;
-  min-width: 320px; */
-  /* min-height: 100vh; */
-}
+} */
 
 h1 {
   font-size: 2.2rem;
@@ -57,24 +42,12 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: 0.15s ease-in-out;
+  color: white;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--secondary-color);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
